2005-03-17  Claudio Saavedra <csaavedra@alumnos.utalca.cl>

	* docs/tutorial/gtkmm-tut.xml: Fixes typo in #170730. Pointed out 
	by Jacek Wotka.

2.6.1:

2005-03-12  Claudio Saavedra <csaavedra@alumnos.utalca.cl>
 
 	* docs/tutorial/gtkmm-tut.xml: Fixing inconsistences in documentation.
 	Bug #170131.

2005-03-13  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/cellrenderercombo.hg:
	* gtk/src/combo.hg:
	* gtk/src/fileselection.hg:
	* gtk/src/optionmenu.hg:
	* gtk/src/treemodel.hg:
 	Doxygen comments: Remove deprecated widgets from 
	the Widgets and Dialogs groups, so they don't 
	show up in the lists. 

2005-03-11  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/cellrenderer.ccg: property_renderable_(): Call the base 
	class method, not the method itself, to avoid an infinite loop.

2005-03-10  Cedric Gustin <cedric.gustin@swing.be>

	* MSVC_Net2003/Makefile.am: Add blank.cpp to EXTRA_DIST.
	* MSVC_Net2003/atkmm/atkmm.rc.in,
	MSVC_Net2003/pangomm/pangomm.rc.in: Use gtkmm @VERSION@ as version
	string.

2.6.0:

2005-03-04  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/menus_and_toolbars/main_menu/examplewindow.[h|cc]: 
	Demonstrate radio action items.

2005-03-04  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Fixed a duplication section id.
	* docs/tutorial/Makefile: Make the phpwebnotes version build in a 
	separate directory, to make things simpler.

2005-03-03  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/scale.hg: format_value signal: Modify the custom conversion 
	so that this never sends an empty string to GTK+, so we do not stop 
	C callbacks from using the special meaning that format_value gives to 
	a null string. This needs an extra signal parameter in C++ in future -
	see the comment. Bug #154004 from Lars Luthman, who did the 
	detective work.

2005-03-03 <meissner@suse.de>

	* gtk/src/treeview.ccg: insert_column(): Used (void*)0 instead of 0 
	for the terminating vararg, to avoid g++ 4.0 warning about  missing 