@@ -419,12 +419,13 @@ void TreeView::_auto_store_on_cellrenderer_toggle_edited(const Glib::ustring& pa
 
   //Get the row from the path:
   Glib::RefPtr<TreeModel> refModel = _get_base_model();
-
-  Gtk::TreeModel::iterator iter = refModel->get_iter(path);
-  if(iter)
+  if(refModel)
   {
+    Gtk::TreeModel::iterator iter = refModel->get_iter(path);
+    if(iter)
+    {
       Gtk::TreeRow row = *iter;
-      
+
       //Get the new value:
       //This seems to get the old value, not the new one,
       //so we will just NOT the model value ourselves.
@@ -432,9 +433,10 @@ void TreeView::_auto_store_on_cellrenderer_toggle_edited(const Glib::ustring& pa
       bool bActive = false;
       row.get_value(model_column, bActive);
       bActive = !bActive;
-      
-      //Store the user's new text in the model: 
+
+      //Store the user's new text in the model:
       row.set_value(model_column, bActive);
+    }
   }
 }
 
