@@ -1,3 +1,12 @@
+2005-03-19  Murray Cumming <murrayc@murrayc.com>
+
+	* demos/gtk-demo/example_treeview_editable_cells.cc:
+	* gtk/src/treeview.ccg:
+	* gtk/src/treeview.hg:
+	Test the result of _get_model_base() for a null refptr,
+	to help avoid a crash when closing a window while the 
+	cell renderer is in edit mode. Bug #170855.
+
 2005-03-17  Claudio Saavedra <csaavedra@alumnos.utalca.cl>
 
 	* docs/tutorial/gtkmm-tut.xml: Fixes typo in #170730. Pointed out 
